# mkdocs_pymdownx_material_extras

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  hatch_build.py  pyproject.toml  setup.py
.github/workflows/: deploy.yml
mkdocs_material_custom/: __init__.py
mkdocs_pymdownx_material_extras/: __init__.py  __meta__.py
mkdocs_pymdownx_material_extras/theme/assets/pymdownx-extras/: extra-58cc14bf7d.css  extra-e384f43f0f.css  extra-loader-5bb526e4.js  material-extra-3rdparty-0772e265.js
mkdocs_pymdownx_material_extras/theme/partials/: footer.html  header.html
requirements/: project.txt
